# WaterMixer

./: .gitignore  README.md  platformio.ini
customTest/: .gitignore  CMakeLists.txt  README.md
customTest/glib/: CMakeLists.txt
customTest/glib/PidController/: CMakeLists.txt
customTest/glib/PidController/include/: PidController.h
customTest/glib/pid/: CMakeLists.txt  PID_v1.cpp
customTest/glibTester/: CMakeLists.txt  main.cpp
customTest/simulator/: CMakeLists.txt  main.cpp
docs/: PWMToVoltateConverter.md  apiMethods.adoc
docs/Development/: Development.md  HardwareRequirements.md  ProductRequirements.md  Releases.md  Requirements.md  SystemRequirements.md  UserStories.md  hardware.md
docs/development/: development.md  hardware.md  productRequirements.md  releases.md  system.csv  systemRequirements.md  userStories.md
docs/styles/: style.css
hardware/KiCad/: fp-info-cache  fp-lib-table  sym-lib-table  watermixer-cache.lib  watermixer-rescue.lib  watermixer-symbols.bck  watermixer-symbols.dcm  watermixer-symbols.lib  watermixer.kicad_pcb  watermixer.kicad_pcb-bak  watermixer.net  watermixer.pro  watermixer.sch  watermixer.sch-bak
hardware/KiCad/watermixer-footprints.pretty/: ADS1115_module.kicad_mod  Barrel_Jack.kicad_mod  CR2013-MI2120_touch.kicad_mod  ESP32-DevKitC.kicad_mod  ESP32-S2-Saola-1.kicad_mod  LLC_4CH.kicad_mod  MCP4728_module.kicad_mod  SD_BUCK3A.kicad_mod  Screw_Termianl_01x03.kicad_mod  Screw_Termianl_01x06.kicad_mod
hardware/production/: watermixer-B_CrtYd.gbr  watermixer-B_Cu.gbr  watermixer-B_Fab.gbr  watermixer-B_Mask.gbr  watermixer-B_Paste.gbr  watermixer-B_SilkS.gbr  watermixer-Edge_Cuts.gbr  watermixer-F_CrtYd.gbr  watermixer-F_Cu.gbr  watermixer-F_Fab.gbr  watermixer-F_Mask.gbr  watermixer-F_Paste.gbr  watermixer-F_SilkS.gbr  watermixer-NPTH-drl_map.ps  watermixer-NPTH.drl  watermixer-PTH-drl_map.ps  watermixer-PTH.drl  watermixer-job.gbrjob  watermixer.csv
hardware/production/box/: Box 117x112x40 top.STL  Water Mixer PCB5 ass.easm
lib/watermixer/: valve.cpp  valve.h  watermixer.cpp  watermixer.h
lib/watermixer/examples/: DacAdc_writeWire.cpp  dac_write.cpp  dac_writeWire.cpp  dac_write_diff_pins.cpp  read_pressure.cpp  read_temperature.cpp  serial_valve.cpp  serial_valves.cpp
lib/watermixer/src/: PidController.cpp  PidController.h  flowmocker.cpp  flowmocker.h  valve.cpp  valve.h  watermixer.cpp  watermixer.h
src/: DeviceServerEsp32.cpp  config.h  editpagesetup.h  globals.h  main.cpp  sensors.h  setupMenu.h  upload-ota.h  xmain.cppx
test/: README.md  flowmocker_test.h  pid_test.h  test_functions.h  test_main.cpp  valve_test.h  watermixer_test.h
unit_test/: README.md
voffcon/: Heiti_potturinn.voffcon.card  HotTubTempCtrl.voffcon.ctrl
voffcon/js/: Heiti_potturinn.voffcon.card.js  HotTubTempCtrl.voffcon.ctrl.html  HotTubTempCtrl.voffcon.ctrl.js
